--- a/Company.Service/Company.Service.csproj
+++ b/Company.Service/Company.Service.csproj
@@ -7,7 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="13.0.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.17" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Company.Repositry\Company.Repositry.csproj" />
+    <ProjectReference Include="..\Data.Models\Company.Data.csproj" />
   </ItemGroup>
 
 </Project>
